# fraud-detection-system

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  train.py
.github/workflows/: liting-test.yml
corelib/: __init__.py
corelib/config/: __init__.py  settings.py
corelib/data_repositories/: __init__.py  data_repository_factory.py  data_repository_params.py  data_reposotory.py  local_repository.py  synthetic_data_repository.py
corelib/data_schemas/: __init__.py  data_schema.py  data_schema_factory.py  local_schema.py  synthetic_schema.py  validation.py
corelib/domain/: __init__.py  data_simulator.py  kpis.py  models.py
corelib/domain/feature_transformations/: __init__.py  aggregated_features.py  binary_encoding.py  time_enconding.py
corelib/entrypoints/: __init__.py  api.py  assets.py  local_estimators.py  routes.py
corelib/feature_store/: __init__.py
corelib/feature_store/features/: __init__.py
corelib/feature_store/storages/: __init__.py
corelib/ml/: __init__.py
corelib/ml/algorithms/: __init__.py  algorithm.py  algorithm_factory.py  algorithm_params.py  decision_tree.py  light_gbm.py
corelib/ml/artifact_repositories/: __init__.py  artifact_repository.py
corelib/ml/estimators/: __init__.py  estimator.py  estimator_factory.py  fake_estimator.py  ml_estimator.py
corelib/ml/evaluators/: __init__.py  evaluator.py  evaluator_factory.py  evaluator_params.py  time_evaluator.py
corelib/ml/hyperparam_optim/: __init__.py  hpo_config.py  search_dimension.py
corelib/ml/metrics/: Precision_top_k.py  __init__.py  average_precision.py  card_precision_top_k.py  metric.py  metric_factory.py  perf_card_precision_top_k.py  pr_auc.py  random_pr_auc.py  roc_auc.py
corelib/ml/transformers/: __init__.py  day_linear_transformer.py  identity.py  min_max.py  standar.py  time_cos_transformer.py  time_sin_transformer.py  transformer.py  transformer_chain.py  transformers_factory.py
corelib/services/: __init__.py  contracts.py  prediction_service.py
corelib/utils/: __init__.py  cache.py  io.py  logging.py  plot.py  time.py
tests/: __init__.py  conftest.py
tests/deployment/: __init__.py  test_deployment.py
tests/unit/: __init__.py  test_data_simulator.py  test_feature_transformations.py
(+9 files in other folders)
