[tool.poetry]
name = "fraud-detection-system"
version = "0.1.0"
description = "This repository contains a robust Machine Learning-based Fraud Detection System designed to identify and flag potentially fraudulent transactions in real-time."
authors = ["HeberTU <heber.trj.urt@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "corelib"}]

[tool.poetry.dependencies]
python = "^3.8.5"
pandas = "~1.2.2"
flake8 = "^6.1.0"
pandera = "^0.17.2"
pydantic = "^2.4.2"
loguru = "^0.7.2"
pydantic-settings = "^2.0.3"
scikit-learn = "^1.3.1"
lightgbm = "^4.1.0"
scikit-optimize = "^0.9.0"
numpy = "1.23.4"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.2"
jupyter = "^1.0.0"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.flake8]
exclude = ".venv"